# CodeVibes

./: CHANGELOG.md  README.md  RELEASE_NOTES_v1.0.0.md  __init__.py  cli.py  config.py  diffing.py  formatter.py  main.py  pyproject.toml  rules.py  scanner.py  scoring.py  ui_entry.py
app/: globals.css  layout.tsx  page.tsx
app/api/analyze/: route.ts
app/api/diff/: route.ts
app/api/scan/: route.ts
assets.picture/: desktop.ini
lib/: types.ts
repo_vibes/: cli.py  models.py  web_ui.py
reports/: release_check.json  repo-report.json  smoke.json  smoke.md
ui-open-source/: README.md  README_OPEN_SOURCE.md  next.config.ts  package-lock.json  package.json  tsconfig.json
ui-open-source/app/: globals.css  page.tsx
ui-open-source/app/api/diff/: route.ts
ui-open-source/app/api/scan/: route.ts
ui-open-source/lib/: types.ts
