[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codevibes"
dynamic = ["version"]
description = "Brutally honest repository analysis."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "CodeVibes team" }]
license = { text = "MIT" }
keywords = ["repository", "analysis", "code-quality", "cli"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
]

[project.scripts]
codevibes = "repo_vibes.cli:main"
repo-vibes = "repo_vibes.cli:main"

[tool.setuptools.dynamic]
version = { attr = "repo_vibes.__version__" }

[tool.setuptools]
include-package-data = false
packages = ["repo_vibes"]
